--- a/frontend/vuetify-pwa-firebase-python-template/public/index.html
+++ b/frontend/vuetify-pwa-firebase-python-template/public/index.html
@@ -15,13 +15,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <!-- The core Firebase JS SDK is always required and must be listed first 
     <script src="/__/firebase/7.11.0/firebase-app.js"></script>
-    
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
-    
-    <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
+    -->
   </body>
 </html>
